--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react-native-incall-manager": "^4.2.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
