--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-shake": "^6.0.0-beta.3",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "stream-chat-expo": "^6.6.6",
