forgot to commit. its tons of stuff. auth flow is fully done besides the audio input. prototype for video call

--- a/app.json
+++ b/app.json
@@ -53,7 +53,13 @@
           "microphonePermission": "$(PRODUCT_NAME) requires microphone access in order to capture and transmit audio"
         }
       ],
-      "expo-build-properties"
+      "expo-build-properties",
+      [
+        "expo-sensors",
+        {
+          "motionPermission": "Allow $(PRODUCT_NAME) to access your device motion."
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
