--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-media-library": "~17.0.6",
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
+    "expo-sensors": "~14.0.2",
     "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -42,6 +43,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-incall-manager": "^4.2.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
@@ -49,8 +51,7 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "stream-chat-expo": "^6.6.6",
-    "stream-chat-react-native": "^6.6.6",
-    "expo-sensors": "~14.0.2"
+    "stream-chat-react-native": "^6.6.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
