location updates + animated puck

--- a/app.json
+++ b/app.json
@@ -59,6 +59,12 @@
         {
           "motionPermission": "Allow $(PRODUCT_NAME) to access your device motion."
         }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
       ]
     ],
     "experiments": {
