--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
+    "expo-location": "~18.0.7",
     "expo-media-library": "~17.0.6",
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
@@ -41,9 +42,12 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "2.5.6",
     "react-native-incall-manager": "^4.2.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-maps": "1.18.0",
+    "react-native-maps-routes": "^1.0.4",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
@@ -51,8 +55,7 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "stream-chat-expo": "^6.6.6",
-    "stream-chat-react-native": "^6.6.6",
-    "expo-location": "~18.0.7"
+    "stream-chat-react-native": "^6.6.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
