--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-google-places-autocomplete": "2.5.6",
     "react-native-incall-manager": "^4.2.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-maps": "1.18.0",
@@ -54,8 +53,10 @@
     "react-native-shake": "^6.0.0-beta.3",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
+    "socket.io-client": "^4.8.1",
     "stream-chat-expo": "^6.6.6",
-    "stream-chat-react-native": "^6.6.6"
+    "stream-chat-react-native": "^6.6.6",
+    "expo-notifications": "~0.29.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
