--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@config-plugins/react-native-webrtc": "^10.0.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/netinfo": "11.4.1",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/native": "^7.0.14",
     "@stream-io/react-native-webrtc": "^125.0.7",
     "@stream-io/video-react-native-sdk": "^1.10.9",
@@ -30,10 +31,12 @@
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.7",
     "expo-media-library": "~17.0.6",
+    "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
     "expo-sensors": "~14.0.2",
     "expo-sharing": "~13.0.1",
+    "expo-speech": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.8",
@@ -55,8 +58,7 @@
     "react-native-web": "~0.19.13",
     "socket.io-client": "^4.8.1",
     "stream-chat-expo": "^6.6.6",
-    "stream-chat-react-native": "^6.6.6",
-    "expo-notifications": "~0.29.14"
+    "stream-chat-react-native": "^6.6.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
